# cpp-template

./: CMakeLists.txt  license  readme.md
docs/: Home.md  _Footer.md
include/: some_header.hpp
source/: main.cpp
tests/: CMakeLists.txt  main.test.cpp
